--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: trophic 
+Package: trophic
 Type: Package
 Title: Trophic Models of Energetics to Estimate Carrying Capacity 
 Version: 0.0.1
@@ -17,15 +17,10 @@ Encoding: UTF-8
 LazyData: true
 Depends:
     R (>= 3.0)
-Collate:
-    'internals.R'
-    'calculate.R'
 Imports:
-    methods
+    igraph,
+    future    
 Suggests:
     testthat,
-    mvtnorm,
-    extraDistr,
-    truncdist
 VignetteBuilder: knitr
 RoxygenNote: 6.0.1
