first version of random food web sim with truncated normals

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,8 @@ Depends:
     R (>= 3.0)
 Imports:
     igraph,
-    future    
+    future,    
+    truncnorm
 Suggests:
     testthat,
 VignetteBuilder: knitr
