fix minor bugs in dominance matrix and update docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,3 +35,4 @@ importFrom(igraph,E)
 importFrom(igraph,V)
 importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(igraph,shortest.paths)
+importFrom(truncnorm,rtruncnorm)
