update namespace wtih igraph functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,8 @@ importFrom(future,plan)
 importFrom(future,values)
 importFrom(igraph,E)
 importFrom(igraph,V)
+importFrom(igraph,components)
 importFrom(igraph,graph_from_adjacency_matrix)
+importFrom(igraph,induced.subgraph)
 importFrom(igraph,shortest.paths)
 importFrom(truncnorm,rtruncnorm)
