--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(plot,food_web)
 S3method(plot,pb_ratio)
+S3method(plot,production_estimates)
 S3method(plot,trophic_dynamics)
 S3method(print,biomass_estimates)
 S3method(print,dominance_matrix)
@@ -31,10 +32,17 @@ importFrom(future,future)
 importFrom(future,multiprocess)
 importFrom(future,plan)
 importFrom(future,values)
+importFrom(future.apply,future_lapply)
+importFrom(graphics,axis)
+importFrom(graphics,lines)
+importFrom(graphics,mtext)
+importFrom(graphics,plot)
+importFrom(graphics,points)
 importFrom(igraph,E)
 importFrom(igraph,V)
 importFrom(igraph,components)
 importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(igraph,induced.subgraph)
 importFrom(igraph,shortest.paths)
+importFrom(stats,rbinom)
 importFrom(truncnorm,rtruncnorm)
