update docs with new extract fn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(build_primary_producers)
 export(build_trophic_dynamics)
 export(estimate_biomass)
 export(estimate_production)
+export(extract_nodes)
 export(is.biomass_estimates)
 export(is.dominance_matrix)
 export(is.efficiency_matrix)
