update travis yaml

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ addons:
       ubuntu-toolchain-r-test
 
 after_success:
-  - Rscript -e "covr::codecov()"
+  - Rscript -e 'covr::codecov(type = "all")'
 
 email:
   on_success: change
